--- a/INTITA/Modules/ProfileSettings/SettingsProfile.storyboard
+++ b/INTITA/Modules/ProfileSettings/SettingsProfile.storyboard
@@ -17,22 +17,32 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Cjb-vl-QM8">
-                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
-                                <color key="backgroundColor" name="mainColor"/>
+                                <rect key="frame" x="0.0" y="234" width="414" height="662"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PIj-KA-cKh">
+                                <rect key="frame" x="0.0" y="44" width="414" height="190"/>
+                                <color key="backgroundColor" name="mainColor"/>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Npq-ax-oex"/>
                         <color key="backgroundColor" name="mainColor"/>
-                        <color key="tintColor" name="mainColor"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Cjb-vl-QM8" firstAttribute="leading" secondItem="Npq-ax-oex" secondAttribute="leading" id="8ZK-a4-9rm"/>
                             <constraint firstItem="Npq-ax-oex" firstAttribute="bottom" secondItem="Cjb-vl-QM8" secondAttribute="bottom" constant="-34" id="NQF-Nz-8i7"/>
                             <constraint firstItem="Npq-ax-oex" firstAttribute="trailing" secondItem="Cjb-vl-QM8" secondAttribute="trailing" id="OHo-OQ-kha"/>
-                            <constraint firstItem="Cjb-vl-QM8" firstAttribute="top" secondItem="Npq-ax-oex" secondAttribute="top" id="y7S-oz-hDO"/>
+                            <constraint firstItem="Npq-ax-oex" firstAttribute="trailing" secondItem="PIj-KA-cKh" secondAttribute="trailing" id="hZg-OM-Fqy"/>
+                            <constraint firstItem="PIj-KA-cKh" firstAttribute="top" secondItem="Npq-ax-oex" secondAttribute="top" id="qmv-KL-OAR"/>
+                            <constraint firstItem="Cjb-vl-QM8" firstAttribute="top" secondItem="PIj-KA-cKh" secondAttribute="bottom" id="rOW-Ih-h2e"/>
+                            <constraint firstItem="PIj-KA-cKh" firstAttribute="leading" secondItem="Npq-ax-oex" secondAttribute="leading" id="xMf-ue-7xf"/>
+                            <constraint firstItem="Cjb-vl-QM8" firstAttribute="top" secondItem="Npq-ax-oex" secondAttribute="top" constant="190" id="y7S-oz-hDO"/>
                         </constraints>
                     </view>
                     <nil key="simulatedTopBarMetrics"/>
                     <connections>
+                        <outlet property="headerView" destination="PIj-KA-cKh" id="jJd-9I-pQe"/>
                         <outlet property="tableView" destination="Cjb-vl-QM8" id="kE8-9V-rTH"/>
                     </connections>
                 </viewController>
