--- a/INTITA/Modules/ProfileSettings/Cells/HeaderSettingsTableViewCell.xib
+++ b/INTITA/Modules/ProfileSettings/Cells/HeaderSettingsTableViewCell.xib
@@ -10,9 +10,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="177" id="qpw-P1-R1X" customClass="HeaderSettingsTableViewCell" customModule="INTITA">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="qpw-P1-R1X" customClass="HeaderSettingsTableViewCell" customModule="INTITA">
             <rect key="frame" x="0.0" y="0.0" width="375" height="188"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qpw-P1-R1X" id="4NX-Y6-bfv">
                 <rect key="frame" x="0.0" y="0.0" width="375" height="188"/>
                 <autoresizingMask key="autoresizingMask"/>
@@ -70,9 +70,9 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jo9-vc-nHw">
-                                <rect key="frame" x="8" y="8" width="44.5" height="18"/>
+                                <rect key="frame" x="8" y="8" width="48" height="18"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="44.5" id="u78-rQ-q7G"/>
+                                    <constraint firstAttribute="width" constant="48" id="u78-rQ-q7G"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
