added "back button" to ForgotPassword.storyboard and functional to ForgotPasswordViewController.swift

--- a/INTITA/Modules/ForgotPassword/ForgotPassword.storyboard
+++ b/INTITA/Modules/ForgotPassword/ForgotPassword.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,17 +17,29 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" layoutMarginsFollowReadableWidth="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="X9T-Ud-TdW">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="89" width="414" height="773"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <sections/>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qL3-h3-lL7">
+                                <rect key="frame" x="24" y="52" width="48" height="22"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="48" id="3v7-xS-rfv"/>
+                                </constraints>
+                                <state key="normal" image="chevron.backward" catalog="system"/>
+                                <connections>
+                                    <action selector="backButtonTapped:" destination="XyY-Qt-gEz" eventType="touchUpInside" id="Q3n-Wt-aUT"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="eSg-FT-avf"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="eSg-FT-avf" firstAttribute="trailing" secondItem="X9T-Ud-TdW" secondAttribute="trailing" id="GQX-mS-cDk"/>
+                            <constraint firstItem="qL3-h3-lL7" firstAttribute="leading" secondItem="eSg-FT-avf" secondAttribute="leading" constant="24" id="Yr4-GP-rgk"/>
                             <constraint firstItem="X9T-Ud-TdW" firstAttribute="leading" secondItem="eSg-FT-avf" secondAttribute="leading" id="Yv7-As-Ksj"/>
-                            <constraint firstItem="X9T-Ud-TdW" firstAttribute="top" secondItem="eSg-FT-avf" secondAttribute="top" id="kKH-05-zJV"/>
+                            <constraint firstItem="qL3-h3-lL7" firstAttribute="top" secondItem="eSg-FT-avf" secondAttribute="top" constant="8" id="bNj-VF-6PY"/>
+                            <constraint firstItem="X9T-Ud-TdW" firstAttribute="top" secondItem="eSg-FT-avf" secondAttribute="top" constant="45" id="kKH-05-zJV"/>
                             <constraint firstItem="eSg-FT-avf" firstAttribute="bottom" secondItem="X9T-Ud-TdW" secondAttribute="bottom" id="oKP-XF-VCG"/>
                         </constraints>
                     </view>
@@ -42,6 +54,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="chevron.backward" catalog="system" width="96" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
