--- a/INTITA/Modules/OpportunitiesScreen/Cells/OpportunitiesTableViewCell.xib
+++ b/INTITA/Modules/OpportunitiesScreen/Cells/OpportunitiesTableViewCell.xib
@@ -5,112 +5,111 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="OpportunitiesTableViewCell" customModule="INTITA" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="128"/>
+            <rect key="frame" x="0.0" y="0.0" width="319" height="120"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="128"/>
+                <rect key="frame" x="0.0" y="0.0" width="319" height="120"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sfP-c3-lG7">
-                        <rect key="frame" x="28" y="4" width="319" height="120"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s7W-mq-hHM">
-                                <rect key="frame" x="20" y="4" width="279" height="17"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="17" id="OSf-w6-y2J"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ygo-Wv-LiH">
-                                <rect key="frame" x="20" y="21" width="279" height="25"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="25" id="z4i-7b-dQ5"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="13"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jtw-jn-igU">
-                                <rect key="frame" x="20" y="46" width="279" height="1"/>
-                                <color key="backgroundColor" name="mainColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="1" id="Ngc-Nw-GYS"/>
-                                </constraints>
-                            </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mrb-nG-ekU">
-                                <rect key="frame" x="50" y="57" width="140" height="17"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="17" id="cXi-Pt-yCO"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FlO-d7-4Pb">
-                                <rect key="frame" x="50" y="85" width="249" height="1"/>
-                                <color key="backgroundColor" name="mainColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="1" id="lcQ-2X-p2P"/>
-                                </constraints>
-                            </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s8a-yK-sHy">
-                                <rect key="frame" x="50" y="92" width="36" height="17"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="17" id="h2Q-F8-Aau"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ygo-Wv-LiH">
+                        <rect key="frame" x="20" y="21" width="279" height="25"/>
                         <constraints>
-                            <constraint firstItem="s8a-yK-sHy" firstAttribute="leading" secondItem="sfP-c3-lG7" secondAttribute="leading" constant="50" id="27J-F3-86H"/>
-                            <constraint firstItem="FlO-d7-4Pb" firstAttribute="top" secondItem="mrb-nG-ekU" secondAttribute="bottom" constant="11" id="6xS-ha-AwH"/>
-                            <constraint firstItem="mrb-nG-ekU" firstAttribute="top" secondItem="jtw-jn-igU" secondAttribute="bottom" constant="10" id="DKU-tz-cjk"/>
-                            <constraint firstItem="jtw-jn-igU" firstAttribute="top" secondItem="ygo-Wv-LiH" secondAttribute="bottom" id="IJu-EQ-mda"/>
-                            <constraint firstAttribute="trailing" secondItem="ygo-Wv-LiH" secondAttribute="trailing" constant="20" id="INg-dV-lsq"/>
-                            <constraint firstAttribute="trailing" secondItem="s7W-mq-hHM" secondAttribute="trailing" constant="20" id="K9O-7D-d5W"/>
-                            <constraint firstItem="mrb-nG-ekU" firstAttribute="leading" secondItem="sfP-c3-lG7" secondAttribute="leading" constant="50" id="LIh-sI-Zcl"/>
-                            <constraint firstItem="s7W-mq-hHM" firstAttribute="top" secondItem="sfP-c3-lG7" secondAttribute="top" constant="4" id="QF9-vV-hw3"/>
-                            <constraint firstItem="ygo-Wv-LiH" firstAttribute="leading" secondItem="sfP-c3-lG7" secondAttribute="leading" constant="20" id="Sxn-ql-QAQ"/>
-                            <constraint firstAttribute="trailing" secondItem="FlO-d7-4Pb" secondAttribute="trailing" constant="20" id="U6C-xC-dw4"/>
-                            <constraint firstItem="FlO-d7-4Pb" firstAttribute="leading" secondItem="sfP-c3-lG7" secondAttribute="leading" constant="50" id="YPc-MI-MO6"/>
-                            <constraint firstItem="s7W-mq-hHM" firstAttribute="leading" secondItem="sfP-c3-lG7" secondAttribute="leading" constant="20" id="gnv-Xy-BZC"/>
-                            <constraint firstItem="ygo-Wv-LiH" firstAttribute="top" secondItem="s7W-mq-hHM" secondAttribute="bottom" id="iDH-64-th8"/>
-                            <constraint firstAttribute="trailing" secondItem="jtw-jn-igU" secondAttribute="trailing" constant="20" id="mwk-3B-wHa"/>
-                            <constraint firstItem="jtw-jn-igU" firstAttribute="leading" secondItem="sfP-c3-lG7" secondAttribute="leading" constant="20" id="oYd-Gt-fFM"/>
-                            <constraint firstAttribute="bottom" secondItem="s8a-yK-sHy" secondAttribute="bottom" constant="11" id="sah-H9-GP9"/>
-                            <constraint firstAttribute="trailing" secondItem="mrb-nG-ekU" secondAttribute="trailing" constant="129" id="shf-WW-Wyk"/>
+                            <constraint firstAttribute="height" constant="25" id="gML-YY-lHy"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="13"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jtw-jn-igU">
+                        <rect key="frame" x="20" y="50" width="279" height="1"/>
+                        <color key="backgroundColor" name="mainColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="Ngc-Nw-GYS"/>
+                        </constraints>
+                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zgt-zz-W9t">
+                        <rect key="frame" x="20" y="4" width="279" height="17"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="17" id="u1B-Eh-jeh"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K6Q-9p-nox">
+                        <rect key="frame" x="50" y="56" width="150" height="17"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="17" id="WxR-aH-bSL"/>
+                            <constraint firstAttribute="width" constant="150" id="hAJ-VI-nwp"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EiE-BS-c4u">
+                        <rect key="frame" x="150.5" y="37" width="18.5" height="22"/>
+                        <state key="normal" image="chevron.down" catalog="system"/>
+                        <connections>
+                            <action selector="downButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="6Xs-Ct-HkQ"/>
+                        </connections>
+                    </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xhg-Q9-j8e">
+                        <rect key="frame" x="50" y="91" width="35.5" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FlO-d7-4Pb">
+                        <rect key="frame" x="50" y="85" width="249" height="1"/>
+                        <color key="backgroundColor" name="mainColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="lcQ-2X-p2P"/>
                         </constraints>
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="sfP-c3-lG7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="28" id="HQe-9s-mTG"/>
-                    <constraint firstItem="sfP-c3-lG7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="4" id="hpN-x4-ZeK"/>
-                    <constraint firstAttribute="bottom" secondItem="sfP-c3-lG7" secondAttribute="bottom" constant="4" id="ptU-qA-TnT"/>
-                    <constraint firstAttribute="trailing" secondItem="sfP-c3-lG7" secondAttribute="trailing" constant="28" id="rwL-5X-UPZ"/>
+                    <constraint firstItem="FlO-d7-4Pb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="50" id="7As-EB-iiG"/>
+                    <constraint firstItem="zgt-zz-W9t" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="8bJ-ay-LKb"/>
+                    <constraint firstAttribute="trailing" secondItem="jtw-jn-igU" secondAttribute="trailing" constant="20" id="FhZ-qo-H8h"/>
+                    <constraint firstItem="EiE-BS-c4u" firstAttribute="top" secondItem="zgt-zz-W9t" secondAttribute="bottom" constant="16" id="GuM-DI-U0Q"/>
+                    <constraint firstItem="jtw-jn-igU" firstAttribute="top" secondItem="ygo-Wv-LiH" secondAttribute="bottom" constant="4" id="MEa-2H-RpI"/>
+                    <constraint firstItem="K6Q-9p-nox" firstAttribute="top" secondItem="ygo-Wv-LiH" secondAttribute="bottom" constant="10" id="ZT0-gG-b9w"/>
+                    <constraint firstItem="EiE-BS-c4u" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="fxg-2A-lpZ"/>
+                    <constraint firstItem="zgt-zz-W9t" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="4" id="g2o-3n-cWt"/>
+                    <constraint firstItem="K6Q-9p-nox" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="50" id="hTa-j3-m1E"/>
+                    <constraint firstAttribute="trailing" secondItem="ygo-Wv-LiH" secondAttribute="trailing" constant="20" id="jRH-Nz-nB4"/>
+                    <constraint firstItem="Xhg-Q9-j8e" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="50" id="oSl-VY-Yp2"/>
+                    <constraint firstItem="jtw-jn-igU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="p3K-vO-jz3"/>
+                    <constraint firstItem="FlO-d7-4Pb" firstAttribute="top" secondItem="K6Q-9p-nox" secondAttribute="bottom" constant="12" id="qc9-fJ-44a"/>
+                    <constraint firstItem="ygo-Wv-LiH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="qpJ-Ph-AZe"/>
+                    <constraint firstAttribute="trailing" secondItem="zgt-zz-W9t" secondAttribute="trailing" constant="20" id="sGi-hu-AXT"/>
+                    <constraint firstAttribute="trailing" secondItem="FlO-d7-4Pb" secondAttribute="trailing" constant="20" id="sGq-ZX-e6Z"/>
+                    <constraint firstAttribute="bottom" secondItem="Xhg-Q9-j8e" secondAttribute="bottom" constant="12" id="tJL-L3-u51"/>
+                    <constraint firstItem="ygo-Wv-LiH" firstAttribute="top" secondItem="zgt-zz-W9t" secondAttribute="bottom" id="wsj-Hy-CCj"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="financeLabel" destination="Xhg-Q9-j8e" id="b1P-xy-qnU"/>
+                <outlet property="firstLineView" destination="jtw-jn-igU" id="XHC-GJ-LsY"/>
+                <outlet property="infoLabel" destination="ygo-Wv-LiH" id="g2b-aR-PEO"/>
+                <outlet property="mainLabel" destination="zgt-zz-W9t" id="v80-UR-5uG"/>
+                <outlet property="secondLineView" destination="FlO-d7-4Pb" id="hHC-1Q-dbd"/>
+                <outlet property="taskLabel" destination="K6Q-9p-nox" id="m2D-GS-QyD"/>
+            </connections>
             <point key="canvasLocation" x="7.9710144927536239" y="36.160714285714285"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="chevron.down" catalog="system" width="128" height="72"/>
         <namedColor name="mainColor">
             <color red="0.29399999976158142" green="0.45899999141693115" blue="0.64300000667572021" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
