--- a/INTITA/Modules/OpportunitiesScreen/Opportunities.storyboard
+++ b/INTITA/Modules/OpportunitiesScreen/Opportunities.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -33,8 +34,8 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ehs-Sr-9RB">
-                                <rect key="frame" x="28" y="163" width="358" height="75"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="28" y="568" width="358" height="75"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="75" id="LYq-Xz-kJ4"/>
                                 </constraints>
@@ -46,19 +47,26 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6pP-3z-fsX">
-                                <rect key="frame" x="28" y="266" width="358" height="75"/>
+                                <rect key="frame" x="28" y="671" width="358" height="75"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="75" id="8vD-ur-aHC"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WxZ-D6-A5I">
-                                <rect key="frame" x="28" y="369" width="358" height="75"/>
+                                <rect key="frame" x="28" y="774" width="358" height="75"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="75" id="Neu-0h-H9n"/>
                                 </constraints>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="573-B2-Wfg">
+                                <rect key="frame" x="20" y="118" width="374" height="400"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="400" id="jZl-kz-zsV"/>
+                                </constraints>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="7Gm-b4-BoK"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -67,17 +75,20 @@
                             <constraint firstItem="7Gm-b4-BoK" firstAttribute="trailing" secondItem="6pP-3z-fsX" secondAttribute="trailing" constant="28" id="EVL-tJ-2as"/>
                             <constraint firstItem="qre-CZ-oPV" firstAttribute="leading" secondItem="7Gm-b4-BoK" secondAttribute="leading" constant="8" id="GBT-Kz-Kow"/>
                             <constraint firstItem="hiJ-2G-1e0" firstAttribute="top" secondItem="7Gm-b4-BoK" secondAttribute="top" constant="8" id="Gt2-Rw-1uu"/>
-                            <constraint firstItem="Ehs-Sr-9RB" firstAttribute="top" secondItem="YId-ep-5IF" secondAttribute="bottom" constant="45" id="HXA-Fh-eTY"/>
                             <constraint firstItem="YId-ep-5IF" firstAttribute="top" secondItem="hiJ-2G-1e0" secondAttribute="bottom" constant="15" id="Hgt-ix-GrD"/>
                             <constraint firstItem="WxZ-D6-A5I" firstAttribute="leading" secondItem="7Gm-b4-BoK" secondAttribute="leading" constant="28" id="KRO-xt-nzG"/>
                             <constraint firstItem="7Gm-b4-BoK" firstAttribute="trailing" secondItem="YId-ep-5IF" secondAttribute="trailing" constant="28" id="MUG-Of-MDD"/>
                             <constraint firstItem="qre-CZ-oPV" firstAttribute="top" secondItem="7Gm-b4-BoK" secondAttribute="top" constant="8" id="MyP-Co-ZkE"/>
                             <constraint firstItem="6pP-3z-fsX" firstAttribute="top" secondItem="Ehs-Sr-9RB" secondAttribute="bottom" constant="28" id="Ytk-yl-Qij"/>
                             <constraint firstItem="Ehs-Sr-9RB" firstAttribute="leading" secondItem="7Gm-b4-BoK" secondAttribute="leading" constant="28" id="Z9Z-ro-gvb"/>
+                            <constraint firstItem="573-B2-Wfg" firstAttribute="leading" secondItem="7Gm-b4-BoK" secondAttribute="leading" constant="20" id="a9G-fe-mNH"/>
+                            <constraint firstItem="7Gm-b4-BoK" firstAttribute="trailing" secondItem="573-B2-Wfg" secondAttribute="trailing" constant="20" id="aZZ-F4-wrG"/>
                             <constraint firstItem="hiJ-2G-1e0" firstAttribute="leading" secondItem="qre-CZ-oPV" secondAttribute="trailing" constant="8" id="bJv-0o-VM7"/>
                             <constraint firstItem="7Gm-b4-BoK" firstAttribute="trailing" secondItem="Ehs-Sr-9RB" secondAttribute="trailing" constant="28" id="dQF-Hl-fs4"/>
                             <constraint firstItem="YId-ep-5IF" firstAttribute="leading" secondItem="7Gm-b4-BoK" secondAttribute="leading" constant="28" id="keC-BM-Abk"/>
+                            <constraint firstItem="573-B2-Wfg" firstAttribute="top" secondItem="YId-ep-5IF" secondAttribute="bottom" id="l2V-j5-d1Y"/>
                             <constraint firstItem="6pP-3z-fsX" firstAttribute="leading" secondItem="7Gm-b4-BoK" secondAttribute="leading" constant="28" id="prc-3h-kGd"/>
+                            <constraint firstItem="Ehs-Sr-9RB" firstAttribute="top" secondItem="573-B2-Wfg" secondAttribute="bottom" constant="50" id="qAT-PF-q4v"/>
                             <constraint firstItem="7Gm-b4-BoK" firstAttribute="trailing" secondItem="WxZ-D6-A5I" secondAttribute="trailing" constant="28" id="rt8-3f-KW8"/>
                         </constraints>
                     </view>
@@ -89,15 +100,19 @@
                         <outlet property="heightOfTaskView" destination="8vD-ur-aHC" id="DvS-cX-zsc"/>
                         <outlet property="nameLabel" destination="hiJ-2G-1e0" id="abF-A3-SgD"/>
                         <outlet property="studiesView" destination="WxZ-D6-A5I" id="8Ou-NF-Mel"/>
+                        <outlet property="tableView" destination="573-B2-Wfg" id="k35-go-KJr"/>
                         <outlet property="taskView" destination="6pP-3z-fsX" id="RI4-p0-BNj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UBl-CB-uZf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="341" y="271"/>
+            <point key="canvasLocation" x="340.57971014492756" y="270.53571428571428"/>
         </scene>
     </scenes>
     <resources>
         <image name="chevron.backward" catalog="system" width="96" height="128"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
